# wolfram-library-link-rs

./: .gitignore  .project  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  PacletInfo.m  README.md  build.rs  docbuild.xml
.cargo/: config.toml
Documentation/: GettingStartedWithRustLink.nb  RustLink.nb
Documentation/English/Tutorials/: GettingStarted.nb
Documentation/Guides/: RustLink.nb
RustLink/: PacletInfo.m
RustLink/Examples/: Aborts.wlt  BasicTypes.wlt  Examples.wlt  Expressions.wlt  ManagedExpressions.wlt  RawFunctions.wlt  WSTP.wlt
RustLink/Tests/: AsyncExamples.wlt  DataStore.wlt  Examples.wlt  Images.wlt  NativeArgs.wlt  NumericArrays.wlt  ShareCounts.wlt  WSTP.wlt
docs/: CHANGELOG.md  Development.md  Maintenance.md  QuickStart.md  WhyRust.md
examples/: basic_expressions.rs  downvalue.rs  raw_librarylink_function.rs  raw_wstp_function.rs  structured_expressions.rs
scripts/: BuildPaclet.wls  Dockerfile.gen-bindings  README-gen-bindings.md  RunTests.wls  bootstrap-deps.sh  gen_bindings_all.sh  generate_versioned_bindings.rs  re_build_WLLibraryLink.xml
src/: catch_panic.rs  lib.rs  library_data.rs  numeric_array.rs
tests/: main.rs
wl-library-link/: Cargo.toml
wl-library-link-sys/scripts/: generate_bindings.rs
wl-library-link-sys/src/: lib.rs
wl-library-link/examples/: native_data_types.rs  numeric_arrays.rs  raw_librarylink_function.rs  raw_wstp_function.rs  structured_expressions.rs
wl-library-link/examples/async/: async_file_watcher.rs  async_file_watcher_raw.rs
wl-library-link/examples/tests/: README.md  main.rs  test_data_store.rs  test_native_args.rs  test_share_counts.rs
wl-library-link/src/: args.rs  async_tasks.rs  catch_panic.rs  data_store.rs  lib.rs  library_data.rs  macro_utils.rs  numeric_array.rs  rtl.rs
wl-library-link/tests/: main.rs
wl-library-link/wolfram-library-function-macro/src/: gen_wstp.rs  gen_wxf.rs  lib.rs
wolfram-library-function-macro/: Cargo.toml
wolfram-library-function-macro/src/: function.rs  gen_wstp.rs  gen_wxf.rs  lib.rs
wolfram-library-link/: Cargo.toml
wolfram-library-link-sys/: .rustfmt.toml  Cargo.toml  README.md  build.rs
wolfram-library-link-sys/scripts/: generate_bindings.rs
wolfram-library-link-sys/src/: lib.rs
wolfram-library-link/RustLink/: PacletInfo.m
wolfram-library-link/RustLink/Examples/: BasicTypes.wlt  DataStore.wlt  NativeLoader.wlt  NumericArrays.wlt  RawFunctions.wlt
wolfram-library-link/RustLink/Examples/Docs/Convert/: ManualWSTP.wlt  UsingExpr.wlt
wolfram-library-link/RustLink/Examples/Docs/EvaluateWolframCodeFromRust/: GenerateMessage.wlt
wolfram-library-link/RustLink/LibraryResources/: .include_in_git
wolfram-library-link/RustLink/Tests/: BigInt.wlt  Bug.wlt  DataStore.wlt  KernelExpr.wlt  NativeArgs.wlt  NumericArrayConversions.wlt  ShareCounts.wlt  Threading.wlt  TypeConversions.wlt  WSTP.wlt  WXFExportNestedBigUint.wlt  WXFNativeRoundtrip.wlt
wolfram-library-link/docs/included/: Overview.md  README.md
wolfram-library-link/examples/: aborts.rs  basic_expressions.rs  basic_types.rs  data_store.rs  downvalue.rs  native_data_types.rs  numeric_arrays.rs  raw_librarylink_function.rs  wstp.rs
wolfram-library-link/examples/async/: async_file_watcher.rs  async_file_watcher_raw.rs
wolfram-library-link/examples/docs/: README.md  main.rs
wolfram-library-link/examples/docs/convert/: manual_wstp.rs  mod.rs  using_expr.rs
wolfram-library-link/examples/docs/evaluate_wolfram_code_from_rust/: generate_message.rs
wolfram-library-link/examples/exprs/: basic_expressions.rs  downvalue.rs  managed.rs  structured_expressions.rs
wolfram-library-link/examples/raw/: raw_librarylink_function.rs  raw_wstp_function.rs
wolfram-library-link/examples/tests/: README.md  main.rs  test_bigint.rs  test_data_store.rs  test_images.rs  test_kernel_expr.rs  test_native_args.rs  test_numeric_array_conversions.rs  test_numeric_arrays.rs  test_share_counts.rs  test_threading.rs  test_type_conversions.rs  test_wolfram_library_function.rs  test_wstp.rs  test_wxf_export_nested.rs  test_wxf_roundtrip.rs
wolfram-library-link/src/: args.rs  async_tasks.rs  catch_panic.rs  data_store.rs  docs.rs  image.rs  kernel.rs  lib.rs  library_data.rs  macro_utils.rs  managed.rs  numeric_array.rs  rtl.rs  unsafe_ref_cast.rs  wxf.rs  wxf_option_none_test.rs  wxf_poly.rs
wolfram-library-link/src/docs/: call_back_into_wolfram_from_rust.rs  converting_between_rust_and_wolfram_types.rs  evaluate_wolfram_code_from_rust.rs
wolfram-library-link/src/kernel/: expr_types.rs  predicates.rs  sys.rs
wolfram-library-link/tests/: main.rs  wxf_bigint.rs  wxf_biguint.rs  wxf_option.rs  wxf_poly_roundtrip.rs
wolfram-library-link/wll-proc-macros/: Cargo.toml
wolfram-library-link/wolfram-library-function-macro/: Cargo.toml
wolfram-library-link/wolfram-library-function-macro/src/: function.rs  gen_wstp.rs  gen_wxf.rs
wolfram-library-link/wolfram-library-link-macros/: Cargo.toml
wolfram-library-link/wolfram-library-link-macros/src/: export.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
