[package]
name = "wl-library-link"
version = "0.1.1"
authors = ["Connor Gray <accounts@connorgray.com>"]
edition = "2018"
publish = false

[dependencies]
wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
wl-library-link-sys            = { path = "./wl-library-link-sys" }

wl-wstp             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-wstp.git" }
wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
wl-lang             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-lang.git" }
wl-parse            = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-parse.git" }
wl-symbol-table     = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-symbol-table.git" }
wl-expr-macro       = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr-macro.git" }

lazy_static = "^1"
backtrace = "^0.3.46"
cfg-if = "0.1"

[features]
default = []
nightly = []

[[example]]
name = "raw_wstp_function"
crate-type = ["cdylib"]

[[example]]
name = "raw_librarylink_function"
crate-type = ["cdylib"]
