[package]
name = "wl-library-link"
version = "0.1.1"
authors = ["Connor Gray <accounts@connorgray.com>"]
edition = "2018"
publish = false

[dependencies]
wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
wl-library-link-sys            = { path = "./wl-library-link-sys" }

wl-wstp             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-wstp.git" }
wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
wl-symbol-table     = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-symbol-table.git" }

lazy_static = "^1"
backtrace = "^0.3.46"
cfg-if = "0.1"

[dev-dependencies]
wl-pattern-match = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-pattern-match.git" }
wl-parse         = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-parse.git" }
wxf = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wxf.git" }

[features]
default = []
nightly = []

############
# Examples #
############

[[example]]
name = "raw_wstp_function"
crate-type = ["cdylib"]

[[example]]
name = "raw_librarylink_function"
crate-type = ["cdylib"]

[[example]]
name = "basic_expressions"
crate-type = ["cdylib"]

[[example]]
name = "structured_expressions"
crate-type = ["cdylib"]

[[example]]
name = "downvalue"
crate-type = ["cdylib"]
