[package]
name = "wl-library-link"
version = "0.1.1"
authors = ["Connor Gray <accounts@connorgray.com>"]
edition = "2021"
publish = false

[dependencies]
wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
wl-library-link-sys            = { path = "../wl-library-link-sys" }

wstp                = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wstp.git" }
wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
wl-symbol-table     = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-symbol-table.git" }
wxf                 = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wxf.git" }

lazy_static = "^1"
once_cell = "1.8.0"
backtrace = "^0.3.46"
cfg-if = "0.1"
static_assertions = "1.1.0"

[dev-dependencies]
wl-pattern-match = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-pattern-match.git" }
wl-parse         = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-parse.git" }

[features]
default = []
nightly = ["wolfram-library-function-macro/nightly"]

############
# Examples #
############

[[example]]
name = "raw_wstp_function"
crate-type = ["cdylib"]

[[example]]
name = "raw_librarylink_function"
crate-type = ["cdylib"]

[[example]]
name = "basic_expressions"
crate-type = ["cdylib"]

[[example]]
name = "structured_expressions"
crate-type = ["cdylib"]

[[example]]
name = "downvalue"
crate-type = ["cdylib"]

[[example]]
name = "numeric_arrays"
crate-type = ["cdylib"]

#---------------
# Async examples
#---------------

[[example]]
name = "async_file_watcher"
path = "examples/async/async_file_watcher.rs"
crate-type = ["cdylib"]

[[example]]
name = "async_file_watcher_raw"
path = "examples/async/async_file_watcher_raw.rs"
crate-type = ["cdylib"]