[package]
name = "wolfram-library-function-macro"
version = "0.1.0"
authors = ["Connor Gray <accounts@connorgray.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.17", features = ["full"] }
quote = "^1.0.3"
proc-macro2 = "^1.0.10"
