[package]
name = "wolfram-library-link-sys"
version = "0.1.0"
authors = ["Connor Gray <code@connorgray.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# TODO: Use the 'links' key?
#       See: https://doc.rust-lang.org/cargo/reference/build-scripts.html#a-sys-packages

[dependencies]

[build-dependencies]
wolfram-app-discovery = { git = "https://github.com/WolframResearch/wolfram-app-discovery-rs" }