[package]
name = "wolfram-library-link-sys"
version = "0.2.7"
authors = ["Connor Gray <code@connorgray.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/WolframResearch/wolfram-library-link-rs"
description = "Low-level FFI bindings to the Wolfram LibraryLink C API"
keywords = ["wolfram-library-link", "wstp", "wolfram", "wolfram-language", "wolfram-engine"]
categories = ["external-ffi-bindings", "development-tools::ffi"]

# TODO: Use the 'links' key?
#       See: https://doc.rust-lang.org/cargo/reference/build-scripts.html#a-sys-packages

[dependencies]

[build-dependencies]
bindgen = "0.59.2"

wolfram-app-discovery = "0.3.0"
