[package]
name = "wolfram-library-link"
version = "0.1.2"
authors = ["Connor Gray <code@connorgray.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/WolframResearch/wolfram-library-link-rs"
description = "Bindings to Wolfram LibraryLink"
keywords = ["wolfram-library-link", "wstp", "wolfram", "wolfram-language", "wolfram-engine"]
categories = ["external-ffi-bindings", "development-tools::ffi"]

[dependencies]
wolfram-library-link-macros    = { version = "0.1.2", path = "./wolfram-library-link-macros" }

wolfram-library-link-sys       = { version = "0.1.2", path = "../wolfram-library-link-sys" }

wstp         = "0.1.3"
wolfram-expr = "0.1.0"

once_cell = "1.8.0"
backtrace = "^0.3.46"
static_assertions = "1.1.0"
ref-cast = "1.0.6"
inventory = "0.2.1"

[dev-dependencies]

[features]
default = []
nightly = []

#=======================================
# Examples
#=======================================

[[example]]
name = "basic_types"
crate-type = ["cdylib"]

[[example]]
name = "numeric_arrays"
crate-type = ["cdylib"]

[[example]]
name = "data_store"
crate-type = ["cdylib"]

[[example]]
name = "aborts"
crate-type = ["cdylib"]

[[example]]
name = "wstp_example" # avoid "libwstp.dylib", which seems too generic.
path = "examples/wstp.rs"
crate-type = ["cdylib"]

#-----------------------------
# Raw (unsafe, low-level) APIs
#-----------------------------

[[example]]
name = "raw_wstp_function"
path = "examples/raw/raw_wstp_function.rs"
crate-type = ["cdylib"]

[[example]]
name = "raw_librarylink_function"
path = "examples/raw/raw_librarylink_function.rs"
crate-type = ["cdylib"]

#------------
# Expressions
#------------

[[example]]
name = "basic_expressions"
path = "examples/exprs/basic_expressions.rs"
crate-type = ["cdylib"]

[[example]]
name = "managed_exprs"
path = "examples/exprs/managed.rs"
crate-type = ["cdylib"]

#---------------
# Async examples
#---------------

[[example]]
name = "async_file_watcher"
path = "examples/async/async_file_watcher.rs"
crate-type = ["cdylib"]

[[example]]
name = "async_file_watcher_raw"
path = "examples/async/async_file_watcher_raw.rs"
crate-type = ["cdylib"]

#---------------
# Tests -- see example/tests/README.md
#---------------

[[example]]
name = "library_tests"
path = "examples/tests/main.rs"
crate-type = ["cdylib"]